A huge bunch of commits
Fixed some bugs, re-used the client and server test programs
as the network layer tester. Unit testing for networking fails.
I'll have that removed later on.

--- a/src/test/client.ui
+++ b/src/test/client.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>264</width>
-    <height>101</height>
+    <height>490</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,6 +64,57 @@
        </widget>
       </item>
      </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>190</width>
+     <height>97</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_5">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>user</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>pass</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QLineEdit" name="user_ledit"/>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="pass_ledit"/>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="auth_btn">
+      <property name="text">
+       <string>&amp;Authenticate</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
