--- a/src/server/server_app.ui
+++ b/src/server/server_app.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>contestant_dlg</class>
- <widget class="QDialog" name="contestant_dlg">
+ <class>server_dlg</class>
+ <widget class="QDialog" name="server_dlg">
   <property name="geometry">
    <rect>
     <x>0</x>
