--- a/src/client/welcome.ui
+++ b/src/client/welcome.ui
@@ -10,8 +10,14 @@
     <x>0</x>
     <y>0</y>
     <width>279</width>
-    <height>234</height>
+    <height>267</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="cursor">
    <cursorShape>ArrowCursor</cursorShape>
@@ -22,13 +28,19 @@
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
+  <property name="modal">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>258</width>
-     <height>214</height>
+     <height>245</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -48,13 +60,22 @@
        <bool>true</bool>
       </property>
       <property name="plainText">
-       <string>Instructions go here</string>
+       <string>Instructions go here.
+
+The instructions are parsed from the XML.</string>
       </property>
       <property name="backgroundVisible">
        <bool>false</bool>
       </property>
       <property name="centerOnScroll">
        <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="start_btn">
+      <property name="text">
+       <string>Start</string>
       </property>
      </widget>
     </item>
