reconnect: finished connecting slots and signals also added a modal dialog in case user clicks Cancel button (when asked to reconnect); no functionality has been added yet to close the entire app when the user confirms disconnection
also fixed up some memory management in contestant_app

--- a/src/client/reconnect.ui
+++ b/src/client/reconnect.ui
@@ -29,14 +29,14 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="cancel_btn">
+        <widget class="QPushButton" name="try_btn">
          <property name="text">
-          <string>Reconnect</string>
+          <string>Try Again</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="cancel_btn">
          <property name="text">
           <string>Cancel</string>
          </property>
