--- a/src/client/round1.ui
+++ b/src/client/round1.ui
@@ -150,7 +150,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="prev_btn">
+       <widget class="QPushButton" name="previous_btn">
         <property name="text">
          <string>Previous</string>
         </property>
