Made the password field a real password field (echoing * or the default password hiding character.)

--- a/src/client/login.ui
+++ b/src/client/login.ui
@@ -36,7 +36,14 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="password_line"/>
+        <widget class="QLineEdit" name="password_line">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
