--- a/src/question_editor/question_editor.ui
+++ b/src/question_editor/question_editor.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -51,7 +51,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPlainTextEdit" name="plainTextEdit_5"/>
+           <widget class="QPlainTextEdit" name="textarea_welcome"/>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -172,7 +172,7 @@
         <item row="0" column="0">
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QListView" name="first_round_list">
+           <widget class="QListView" name="list_r1">
             <property name="maximumSize">
              <size>
               <width>300</width>
@@ -184,7 +184,7 @@
           <item>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
-             <widget class="QPushButton" name="add_q_round_1">
+             <widget class="QPushButton" name="button_addq_r1">
               <property name="text">
                <string>Add</string>
               </property>
@@ -371,7 +371,7 @@
         <item row="0" column="0">
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="QListView" name="listView_2">
+           <widget class="QListView" name="list_r2">
             <property name="maximumSize">
              <size>
               <width>300</width>
@@ -383,7 +383,7 @@
           <item>
            <layout class="QGridLayout" name="gridLayout_4">
             <item row="0" column="0">
-             <widget class="QPushButton" name="pushButton_5">
+             <widget class="QPushButton" name="button_addq_r2">
               <property name="text">
                <string>Add</string>
               </property>
@@ -425,12 +425,12 @@
              <string>Question:</string>
             </property>
             <property name="buddy">
-             <cstring>plainTextEdit_2</cstring>
+             <cstring>question_r2_text</cstring>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QPlainTextEdit" name="plainTextEdit_2">
+           <widget class="QPlainTextEdit" name="question_r2_text">
             <property name="maximumSize">
              <size>
               <width>16777215</width>
@@ -470,7 +470,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEdit_5"/>
+           <widget class="QLineEdit" name="question_r2_a"/>
           </item>
           <item row="3" column="0">
            <widget class="QCheckBox" name="checkBox_2">
@@ -480,7 +480,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="lineEdit_6"/>
+           <widget class="QLineEdit" name="question_r2_b"/>
           </item>
           <item row="4" column="0">
            <widget class="QCheckBox" name="checkBox_3">
