--- a/src/question_editor/question_editor.ui
+++ b/src/question_editor/question_editor.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>4</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -471,12 +471,12 @@
                <string>Score:</string>
               </property>
               <property name="buddy">
-               <cstring>spinBox_4</cstring>
+               <cstring>question_r2_time</cstring>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QSpinBox" name="spinBox_4">
+             <widget class="QSpinBox" name="question_r2_time">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -489,7 +489,7 @@
              </widget>
             </item>
             <item row="2" column="0">
-             <widget class="QCheckBox" name="checkBox">
+             <widget class="QCheckBox" name="question_r2_ans_a">
               <property name="text">
                <string>A.</string>
               </property>
@@ -499,7 +499,7 @@
              <widget class="QLineEdit" name="question_r2_a"/>
             </item>
             <item row="3" column="0">
-             <widget class="QCheckBox" name="checkBox_2">
+             <widget class="QCheckBox" name="question_r2_ans_b">
               <property name="text">
                <string>B.</string>
               </property>
@@ -509,7 +509,7 @@
              <widget class="QLineEdit" name="question_r2_b"/>
             </item>
             <item row="4" column="0">
-             <widget class="QCheckBox" name="checkBox_3">
+             <widget class="QCheckBox" name="question_r2_ans_c">
               <property name="text">
                <string>C.</string>
               </property>
@@ -519,7 +519,7 @@
              <widget class="QLineEdit" name="question_r2_c"/>
             </item>
             <item row="5" column="0">
-             <widget class="QCheckBox" name="checkBox_4">
+             <widget class="QCheckBox" name="question_r2_ans_d">
               <property name="text">
                <string>D.</string>
               </property>
